# News_letter

./: crawler.py  knowledge_graph.py  mailer.py  main.py  pyproject.toml  summarizer.py  test_font.py  verify_images.py
.github/workflows/: weekly_newsletter.yml
